Criação do Projeto, Implementação da home, footer e navbar, instalação do bootstrap e do fontawesome

--- a/portfolioPessoal/src/app/home/home.component.html
+++ b/portfolioPessoal/src/app/home/home.component.html
@@ -1,1 +1,32 @@
-<p>Home works !</p>
+<div class="container w-100">
+
+    <div class="row w-100 mt-5">
+        <div class="col-md-12">
+            <h1 class="text-monospace text-center">Sejam Bem Vindes ao meu blog !!</h1>
+        </div>
+    </div>
+
+    <div class="row w-100 mt-4 mb-4">
+        <div class="col-md-12">
+            <p class="text-justify text-monospace"> 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illo ab. Doloremque delectus explicabo
+                quibusdam nostrum cupiditate consectetur at fugit ad, perferendis ipsam tempore earum pariatur
+                necessitatibus suscipit cum exercitationem!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eos quia unde laborum hic tenetur ipsa,
+                cumque doloribus itaque laboriosam, soluta eius inventore dolor commodi minima voluptate nisi reiciendis
+                iure.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta dolores sunt accusamus quia culpa
+                consectetur et aliquam libero illo a natus id quidem mollitia eius tempore nesciunt quos, eveniet
+                voluptas?
+            </p>
+        </div>
+    </div>
+</div>
+    <div class="parallax">
+    </div>
+
+    <div class="row w-100 mt-5 mb-5">
+        <div class="col-md-12 w-100 d-flex justify-content-center">
+            <button class="btn btn-outline-dark text-uppercase font-weight-bold">Ver o feed</button>
+        </div>
+    </div>
