--- a/portfolioPessoal/src/app/home/home.component.css
+++ b/portfolioPessoal/src/app/home/home.component.css
@@ -1,3 +1,8 @@
-p {
-    font-size: 15px;
+.parallax {
+    background-image: url('https://i.imgur.com/PEoH72I.jpg');
+    min-height: 500px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
