Criação do Perfil Lateral, Feed e Cards

--- a/portfolioPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/portfolioPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -2,10 +2,13 @@
     <div class="d-flex justify-content-center">
         <img class="card-img-top rounded-circle w-75" src="https://i.imgur.com/Mn3W7Pq.jpg" alt="Imagem de capa do card">
     </div>
+
     <div class="card-body">
       <h5 class="card-title text-center text-monospace ">Victor Rigoleto</h5>
       <p class="card-text text-center text-monospace">Desenvolvedor FullStacker Jr</p>
-      <a href="#" class="btn btn-outline-info mb-3">Linkedin</a>
-      <a href="https://github.com/victorigoleto" class="btn btn-outline-dark">GitHub</a>
+      
+      <a href="https://www.linkedin.com/in/victor-rigoleto" class="btn btn-outline-info mb-3 d-flex justify-content-center" target="_blank">Linkedin</a>
+      <a href="https://github.com/victorigoleto" class="btn btn-outline-dark d-flex justify-content-center" target="_blank">GitHub</a>
     </div>
+
   </div>
