Endereçamento de Rotas

--- a/portfolioPessoal/src/app/home/home.component.html
+++ b/portfolioPessoal/src/app/home/home.component.html
@@ -1,32 +1,30 @@
 <div class="container w-100">
 
-    <div class="row w-100 mt-5">
-        <div class="col-md-12">
-            <h1 class="text-monospace text-center">Sejam Bem Vindes ao meu blog !!</h1>
-        </div>
+    <div class="patterns">
+    <div class="d-flex justify-content-between">
+    <div class="row w-100">
+        <div class="col-md-8">
+                <div class="home__data">
+                    <h1 class="home__title"><br><p>Olá,</p>Eu sou o <p class="home__title-color">Victor Rigoleto</p> Desenvolvedor <p>FullStack Jr</p></h1>
+            
+                    <a href="contato.html" class="button">Contato</a>
+                </div>
     </div>
+</div>
 
-    <div class="row w-100 mt-4 mb-4">
-        <div class="col-md-12">
-            <p class="text-justify text-monospace"> 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, illo ab. Doloremque delectus explicabo
-                quibusdam nostrum cupiditate consectetur at fugit ad, perferendis ipsam tempore earum pariatur
-                necessitatibus suscipit cum exercitationem!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eos quia unde laborum hic tenetur ipsa,
-                cumque doloribus itaque laboriosam, soluta eius inventore dolor commodi minima voluptate nisi reiciendis
-                iure.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta dolores sunt accusamus quia culpa
-                consectetur et aliquam libero illo a natus id quidem mollitia eius tempore nesciunt quos, eveniet
-                voluptas?
-            </p>
+
+    <div class="row w-100 ">
+        <div class="col-md-4 mt-5">
+            <div class="home__img">    
+                <img src="https://i.imgur.com/KksLbXW.png">
+            </div>
+        </div>
         </div>
     </div>
 </div>
-    <div class="parallax">
-    </div>
-
+</div>
     <div class="row w-100 mt-5 mb-5">
         <div class="col-md-12 w-100 d-flex justify-content-center">
-            <button class="btn btn-outline-dark text-uppercase font-weight-bold">Ver o feed</button>
+            <button class="btn btn-outline-dark text-uppercase font-weight-bold" routerLink='/feed'>Ver o feed</button>
         </div>
     </div>
