--- a/portfolioPessoal/src/app/feed/feed.component.html
+++ b/portfolioPessoal/src/app/feed/feed.component.html
@@ -1,14 +1,14 @@
 <div class="container">
 
-    <div class="row">
+    <div class="row ">
 
         <div class="col md-4">
             <app-perfil-lateral></app-perfil-lateral>
         </div>
 
-        <div class="col-md-8">
+        <div class="col-md-8 shadow p-3 mb-5 bg-white rounded">
            
-            <h3 class="text-center mb-4 text-monospace"> Como tem sido minha experiência na Generation ?</h3>
+            <h3 class="text-center mb-4 "> Como tem sido minha experiência na Generation ?</h3>
         
             <div class="form-group">
                 <label class="text-monospace" for="titulo">Título:</label>
