--- a/portfolioPessoal/src/app/home/home.component.css
+++ b/portfolioPessoal/src/app/home/home.component.css
@@ -1,8 +1,54 @@
-.parallax {
-    background-image: url('https://i.imgur.com/PEoH72I.jpg');
-    min-height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
+.home{
+    position: relative;
+    z-index: 1;
+}
+    .home__title{
+    font-size: 56px;
+    margin-bottom: 10px;
+    font-weight: 600;
+    color: black;
+  }
+  .home__title-color{
+    color: #f21495;
+  }
+  .home__img{
+    max-width: 50px;
+    max-height: 50px;
+  }
+
+  .button{
+    display: inline-block;
+    background-color: #f21495;
+    color: #fff;
+    padding: 12px 40px;
+    font-weight: 600;
+    border-radius: 8px;
+  }
+  .button:hover{
+    box-shadow: 0 10px 36px rgba(0,0,0,.15);
+    background-color: black;
+  }
+
+  .patterns{
+    background-image: url(../../assets/img/patterns.png);
     background-size: cover;
+    max-height: 100vh;
+    max-width: 100vw;
+    animation: pattersAnimation 30s infinite linear;
+    z-index: -1;
+    position: relative;
+  }
+
+  @keyframes pattersAnimation {
+	0% {
+        background-position: 0 -100vh;
+        opacity: 0;
+    }
+    10% {
+        opacity: .1;
+    }
+    100% {
+        background-position: 0 100vh;
+        opacity: 0
+    }
 }
