--- a/portfolioPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/portfolioPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -1,14 +1,14 @@
-<div class="card border-0" style="width: 18rem;">
+<div class="card border-0 shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
     <div class="d-flex justify-content-center">
-        <img class="card-img-top rounded-circle w-75" src="https://i.imgur.com/Mn3W7Pq.jpg" alt="Imagem de capa do card">
+        <img class="card-img-top w-100 " src="https://i.imgur.com/KksLbXW.png" alt="Imagem de capa do card">
     </div>
 
     <div class="card-body">
-      <h5 class="card-title text-center text-monospace ">Victor Rigoleto</h5>
-      <p class="card-text text-center text-monospace">Desenvolvedor FullStacker Jr</p>
+      <h5 class="card-title text-center font-weight-bold">Victor Rigoleto</h5>
+      <p class="card-text text-center font-italic">Desenvolvedor FullStack Jr</p>
       
-      <a href="https://www.linkedin.com/in/victor-rigoleto" class="btn btn-outline-info mb-3 d-flex justify-content-center" target="_blank">Linkedin</a>
-      <a href="https://github.com/victorigoleto" class="btn btn-outline-dark d-flex justify-content-center" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/victor-rigoleto" class="btn mb-3 d-flex justify-content-center" target="_blank">Linkedin</a>
+      <a href="https://github.com/victorigoleto" class="btn d-flex justify-content-center" target="_blank">GitHub</a>
     </div>
 
   </div>
