Consumo de API e Segurança

--- a/portfolioPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/portfolioPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="card-body">
-      <h5 class="card-title text-center font-weight-bold">Victor Rigoleto</h5>
+      <h5 class="card-title text-center font-weight-bold">{{nome}}</h5>
       <p class="card-text text-center font-italic">Desenvolvedor FullStack Jr</p>
       
       <a href="https://www.linkedin.com/in/victor-rigoleto" class="btn mb-3 d-flex justify-content-center" target="_blank">Linkedin</a>
