--- a/portfolioPessoal/src/app/navbar/navbar.component.html
+++ b/portfolioPessoal/src/app/navbar/navbar.component.html
@@ -12,6 +12,12 @@
         <li class="nav-item">
           <a class="nav-link text-monospace text-uppercase font-weight-bold p-3" routerLink='/feed'>Feed</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-monospace text-uppercase font-weight-bold p-3" routerLink='/login'>Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-monospace text-uppercase font-weight-bold p-3" routerLink='/cadastro'>Cadastro</a>
+        </li>
       </ul>
     </div>
   </nav>
