--- a/portfolioPessoal/src/app/cadastro/cadastro.component.html
+++ b/portfolioPessoal/src/app/cadastro/cadastro.component.html
@@ -9,7 +9,7 @@
         <div>
           <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" class="form-control" id="nome" placeholder="Digite o seu nome aqui" >
+            <input type="text" class="form-control" id="nome" placeholder="Digite o seu nome aqui" [(ngModel)]='user.nome'>
           </div>
   
           <div class="form-group">
