--- a/portfolioPessoal/src/app/home/home.component.html
+++ b/portfolioPessoal/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container w-100">
-
+    
     <div class="patterns">
     <div class="d-flex justify-content-between">
     <div class="row w-100">
@@ -7,7 +7,8 @@
                 <div class="home__data">
                     <h1 class="home__title"><br><p>Olá,</p>Eu sou o <p class="home__title-color">Victor Rigoleto</p> Desenvolvedor <p>FullStack Jr</p></h1>
             
-                    <a href="contato.html" class="button">Contato</a>
+                    <a href="contato.html" class="button">Saiba mais</a>
+                    
                 </div>
     </div>
 </div>
