--- a/portfolioPessoal/src/app/footer/footer.component.html
+++ b/portfolioPessoal/src/app/footer/footer.component.html
@@ -15,17 +15,14 @@
         <div class="col-md-12 d-flex justify-content-center">
   
               <ul class="social-network">
-               <li><a href="#" target="_blank" class="icoFacebook" title="Facebook">
+               <li><a href="https://www.facebook.com/generationbrasil" target="_blank" class="icoFacebook" title="Facebook">
                  <fa-icon [icon]="faFacebook" class="faFacebook fa-3x p-3"></fa-icon>
                 </a></li>
-               <li><a href="#" target="_blank" class="icoInstagram" title="Instagram">
+               <li><a href="https://www.instagram.com/generationbrasil/" target="_blank" class="icoInstagram" title="Instagram">
                  <fa-icon [icon]="faInstagram" class="faInstagram fa-3x p-3"></fa-icon>
                 </a></li>
-               <li><a href="#" target="_blank" class="icoLinkedin" title="Linkedin">
+               <li><a href="https://www.linkedin.com/school/generationbrasil/" target="_blank" class="icoLinkedin" title="Linkedin">
                  <fa-icon [icon]="faLinkedin" class="faLinkedin fa-3x p-3"></fa-icon>
-                </a></li>
-                <li><a href="#" target="_blank" class="icoGithub" title="Github">
-                <fa-icon [icon]="faGithub" class="faGithub fa-3x p-3"></fa-icon>
                 </a></li>
               </ul>
       </div>
@@ -45,4 +42,3 @@
   
   </footer>
   <!-- Footer -->
-  
