--- a/portfolioPessoal/src/app/login/login.component.html
+++ b/portfolioPessoal/src/app/login/login.component.html
@@ -5,20 +5,24 @@
       </div>
     </div>
     <div class="row mb-5 d-flex justify-content-center">
-      <div class="col-md-6">
+      <div class="col-md-5">
+        <img src="./assets/img/login.png" width="400" height="400">
+      </div>
+      <div class="col-md-7 mt-5">
         <div>
           <div class="form-group">
             <label for="exampleInputEmail1">Endereço de email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
-            <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email" [(ngModel)] = 'userLogin.usuario'>
+            <small id="emailHelp" class="form-text text-muted" >Nunca vamos compartilhar seu email, com ninguém.</small>
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Senha</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha" [(ngModel)] = 'userLogin.senha'>
           </div>
           <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-outline-success w-25 ">Entrar</button>
+            <button type="submit" class="btn btn-outline-success w-25 " (click) = 'entrar()'>Entrar</button>
           </div>
+  
         </div>
       </div>
     </div>
