--- a/portfolioPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/portfolioPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -1,14 +1,13 @@
-<div class="card border-0 shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-    <div class="d-flex justify-content-center">
-        <img class="card-img-top w-100 " src="https://i.imgur.com/KksLbXW.png" alt="Imagem de capa do card">
+<div class="card border-0" style="width: 18rem;">
+    <div class=" d-flex justify-content-center">
+        <img class="card-img-top rounded-circle" src="/assets/perfil-lateral.png" alt="Imagem de capa do card">
     </div>
-
     <div class="card-body">
-      <h5 class="card-title text-center font-weight-bold">{{nome}}</h5>
-      <p class="card-text text-center font-italic">Desenvolvedor FullStack Jr</p>
+      <h5 class="card-title text-enter text-monospace">{{nome}}</h5>
+      <p class="card-text">Estudante de ADS e Full Stack Java na Generation Brasil</p>
       
-      <a href="https://www.linkedin.com/in/victor-rigoleto" class="btn mb-3 d-flex justify-content-center" target="_blank">Linkedin</a>
-      <a href="https://github.com/victorigoleto" class="btn d-flex justify-content-center" target="_blank">GitHub</a>
-    </div>
+      <a href="https://www.linkedin.com/in/carla-cristina-c-de-paula/" class="btn btn-outline-info mb-3 d-flex justify-content-center" target="_blank">Linkedin</a>
+      <a href="https://github.com/CarlaCCP" class="btn btn-outline-dark mb-3 d-flex justify-content-center" target="_blank">GitHub</a>
 
+    </div>
   </div>
